<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textMainTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/app_name"
        android:textSize="@dimen/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMainSearchEntry"
        android:layout_width="239dp"
        android:layout_height="44dp"
        android:layout_marginTop="36dp"
        android:drawableEnd="@android:drawable/ic_menu_close_clear_cancel"
        android:ems="10"
        android:hint="@string/editMainSearchHint"
        android:inputType="text"
        android:textSize="@dimen/widgetText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMainTitleLabel" />

    <Button
        android:id="@+id/buttonMainSearch"
        android:layout_width="115dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:text="@string/buttonMainSearch"
        android:textSize="@dimen/widgetText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/editMainSearchEntry"
        app:layout_constraintTop_toBottomOf="@+id/textMainTitleLabel" />

    <ListView
        android:id="@+id/listSongs"
        android:layout_width="414dp"
        android:layout_height="488dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMainSearchEntry" />

    <Button
        android:id="@+id/buttonMainAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/buttonMainAdd"
        android:textSize="@dimen/widgetText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listSongs"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/buttonMainDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonMainDelete"
        android:textSize="@dimen/widgetText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listSongs"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>