<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteSongActivity">

    <TextView
        android:id="@+id/textDeleteTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/labelDeleteTitle"
        android:textSize="@dimen/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDeleteSongLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/labelDeleteSong"
        android:textSize="@dimen/widgetText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteTitleLabel" />

    <EditText
        android:id="@+id/editDeleteSongEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="@dimen/widgetText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toEndOf="@+id/textDeleteSongLabel"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteTitleLabel" />

    <Button
        android:id="@+id/buttonDeleteCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/buttonDeleteCancel"
        android:textSize="@dimen/widgetText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteSongLabel"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/buttonDeleteConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonDeleteConfirm"
        android:textSize="@dimen/widgetText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toEndOf="@+id/buttonDeleteCancel"
        app:layout_constraintTop_toBottomOf="@+id/editDeleteSongEntry"
        app:layout_constraintVertical_bias="0.97" />
</androidx.constraintlayout.widget.ConstraintLayout>